re-deuplication, set back to 150ms.